--- a/about.html
+++ b/about.html
@@ -2,33 +2,45 @@
 title: about me:)
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="utf-8">
+
 <head>
-	{%- include head.html -%}
 	<style>
-	h2 {
-		font-feature-settings: "lnum";
-		background-color: #ddd;
-		width: 140px;
-		height: 140px;
-		border-radius: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center
-	}
-	body {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		font-size: 20px;
-		height: 80vh;
-	}
-	p {text-align: center; line-height: 2em;}
+		h2 {
+			font-feature-settings: "lnum";
+			background-color: #ddd;
+			width: 140px;
+			height: 140px;
+			border-radius: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center
+		}
+
+		body {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			font-size: 20px;
+			height: 80vh;
+		}
+
+		p {
+			text-align: center;
+			line-height: 2em;
+		}
+
+		b {
+			border-bottom: 10px solid pink;
+		}
 	</style>
 </head>
+
 <body>
 	<h2>about</h2>
-	<p>아직 쓰는중,,,</p>
+	<p><b>프론트엔드 개발자를 목표</b>로 하루하루 배운것을 기록하는 블로그 ٩(ˊᗜˋ*)و </p>
+	<p>당도 최고 치악산 복숭아 문의: <a>https://bsscl.tistory.com/</a></p>
 </body>
+
 </html>
