about 페이지 수정

--- a/about.html
+++ b/about.html
@@ -34,13 +34,24 @@ title: about me:)
 		b {
 			border-bottom: 10px solid pink;
 		}
+		a {
+			background-color: pink;
+			color:black;
+		}
+		img {
+			width: 300px;
+			height: 300px;
+			alt: "죠르디 조아!";
+		}
 	</style>
 </head>
 
 <body>
-	<h2>about</h2>
+	<img src="https://user-images.githubusercontent.com/47624978/101048168-c41d0e00-35c5-11eb-81ed-3e63b3169a15.jpg">
 	<p><b>프론트엔드 개발자를 목표</b>로 하루하루 배운것을 기록하는 블로그 ٩(ˊᗜˋ*)و </p>
-	<p>당도 최고 치악산 복숭아 문의: <a>https://bsscl.tistory.com/</a></p>
+	<p>당도 최고 치악산 복숭아🍑 문의: <a href="https://bsscl.tistory.com/">https://bsscl.tistory.com/</a></p>
+	<p><b>Javascript Vue.js Firebase</b>를 열심히 공부하고 있습니다🔥 👩‍💻 </p>
+	<p>토끼🐰와 죠르디🦖를 좋아해요</p>
 </body>
 
 </html>
